<resources>
    <string name="app_name">Поле Чудес!!!</string>
    <string name="roll">Крутить барабан</string>
    <string name="start_game">Начать игру</string>
    <string name="download_game">Загрузить игру</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="volume">Громкость</string>
    <string name="good">Хорошо</string>
    <string name="zero">0</string>
    <string name="round">Крутить барабан</string>
    <string name="shick">Ответить</string>
    <string name="say">Назовите слово</string>
    <string name="hint">Подсказка</string>
    <string name="rule">Правило игры</string>
    <string name="leaders">Лидеры</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>